--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,16 @@ footer {
 }
 
 /* line 124, ../scss/partials/_page.scss */
+.products {
+  padding-top: 40px;
+}
+
+/* line 128, ../scss/partials/_page.scss */
+.shopify-buy-frame {
+  margin: 0 auto;
+}
+
+/* line 132, ../scss/partials/_page.scss */
 .social-profiles {
   display: -webkit-box;
   display: -moz-box;
@@ -483,7 +493,7 @@ footer {
   border-bottom: solid 1px #777777;
   padding-bottom: 75px;
 }
-/* line 139, ../scss/partials/_page.scss */
+/* line 147, ../scss/partials/_page.scss */
 .social-profiles .profile {
   display: -webkit-box;
   display: -moz-box;
@@ -493,7 +503,7 @@ footer {
   display: -ms-flexbox;
   align-items: center;
 }
-/* line 147, ../scss/partials/_page.scss */
+/* line 155, ../scss/partials/_page.scss */
 .social-profiles .profile .photo {
   width: 78px;
   height: 78px;
@@ -503,7 +513,7 @@ footer {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
   margin-right: 20px;
 }
-/* line 157, ../scss/partials/_page.scss */
+/* line 165, ../scss/partials/_page.scss */
 .social-profiles .profile .info h3 {
   margin-bottom: 7px;
   margin-top: 0;
@@ -511,32 +521,32 @@ footer {
   font-size: 28px;
   line-height: 28px;
 }
-/* line 164, ../scss/partials/_page.scss */
+/* line 172, ../scss/partials/_page.scss */
 .social-profiles .profile .info a {
   display: inline-block;
   margin-right: 10px;
   height: 26px;
 }
-/* line 168, ../scss/partials/_page.scss */
+/* line 176, ../scss/partials/_page.scss */
 .social-profiles .profile .info a img {
   vertical-align: middle;
 }
-/* line 171, ../scss/partials/_page.scss */
+/* line 179, ../scss/partials/_page.scss */
 .social-profiles .profile .info a:hover {
   opacity: .5;
 }
 @media (max-width: 800px) and (min-width: 580px) {
-  /* line 180, ../scss/partials/_page.scss */
+  /* line 188, ../scss/partials/_page.scss */
   .social-profiles .profile .info {
     max-width: 159px;
   }
-  /* line 182, ../scss/partials/_page.scss */
+  /* line 190, ../scss/partials/_page.scss */
   .social-profiles .profile .info h3 {
     width: 117px;
   }
 }
 @media (max-width: 579px) {
-  /* line 124, ../scss/partials/_page.scss */
+  /* line 132, ../scss/partials/_page.scss */
   .social-profiles {
     flex-wrap: wrap;
     margin-top: 15px;
@@ -545,38 +555,49 @@ footer {
     -ms-flex-pack: center;
     margin-bottom: 50px;
   }
-  /* line 197, ../scss/partials/_page.scss */
+  /* line 205, ../scss/partials/_page.scss */
   .social-profiles .profile {
     min-width: 310px;
     margin-top: 50px;
   }
 }
 
-/* line 205, ../scss/partials/_page.scss */
+/* line 213, ../scss/partials/_page.scss */
 .description h1 {
   font-size: 36px;
   margin: 0px 0px 50px;
 }
-/* line 209, ../scss/partials/_page.scss */
+/* line 217, ../scss/partials/_page.scss */
 .description p {
   font-size: 33px;
   font-weight: 100;
   margin-bottom: 75px;
 }
-/* line 214, ../scss/partials/_page.scss */
+/* line 222, ../scss/partials/_page.scss */
 .description p a {
   font-weight: bolder;
   font-style: italic;
   color: #fff;
   text-decoration: none;
 }
-/* line 219, ../scss/partials/_page.scss */
+/* line 227, ../scss/partials/_page.scss */
 .description p a:hover {
   text-decoration: underline;
 }
-/* line 224, ../scss/partials/_page.scss */
+/* line 232, ../scss/partials/_page.scss */
 .description .btn {
   margin: 0 15px 15px;
+}
+
+/* line 238, ../scss/partials/_page.scss */
+#snow {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
 }
 
 /* line 7, ../../../../../Applications/compass.app/Contents/Resources/lib/ruby/compass_extensions/compass-h5bp-0.1.2/stylesheets/h5bp/_helpers.scss */
